Bug 76658 - Wrong error message in icon import in customize dialog
Summary: Wrong error message in icon import in customize dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.6.2 release
Hardware: All All
: medium minor
Assignee: Noel Grandin
URL:
Whiteboard: target:4.4.0 target:4.3.5
Keywords: bibisectRequest, regression
: 81130 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-03-26 21:09 UTC by Regina Henschel
Modified: 2015-12-17 07:53 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of error message (8.86 KB, image/png)
2014-03-26 21:09 UTC, Regina Henschel
Details
screenshot (17.65 KB, image/png)
2014-10-31 13:59 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2014-03-26 21:09:24 UTC
Created attachment 96426 [details]
Screenshot of error message

Make an icon and put save it somewhere.
Start Draw or another module of LO.
Open 'Customize Toolbar' dialog and add a command, which has no icon yet, e.g. 'Extended Tips' from category 'Application'.
Click on 'Modify' and then on 'Change Icon'.
Click on 'Import' and select your icon.
You get the attached error message, although the icon is actually imported.
Assign the imported icon to the command.
Comment 1 Thomas Hackert 2014-04-09 13:52:10 UTC
Hello Regina, *,
which file type did you use for your icon? The dialog's Help says

<quote>
You can only import icons that are in the PNG file format and that are 16x16 or 26x26 pixels in size.
</quote>

(but this does not change anything. If I use a PGN file with a size of 16x16, I get the message

<quote>
file /path/to/file
</quote>

in the box below, but with no further info ... :( ).

Tested with
LO: Version: 4.3.0.0.alpha0+ Build ID: 6d9d0393f54d6a20a5c5b11b038fb1cb9dcfe492
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-04-09_06:28:03
OS: Debian Testing i686

HTH
Thomas.
Comment 2 Regina Henschel 2014-04-09 15:56:21 UTC
I have used file type .png. I have tried both sizes 16x16 and 26x26. I'm sure the file format has been correct, because the icons are actually added. Only the fact, that an error message pops up, is wrong.

[To add an 16x16 icon, you have to set the icon size to 'small' in Tools > Options > LibreOffice > View. To add an 26x26 icon, set the icon size to 'large'.]
Comment 3 Yousuf Philips (jay) (retired) 2014-10-31 13:58:25 UTC
Confirmed in 4.1.6, 4.2.6 and master on Linux. This doesnt happen with 4.0.6.

Version: 4.4.0.0.alpha1+
Build ID: 3efc3cc5b0b4b6151e928c2348c7dc6f74181db5
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-10-29_01:36:59
Comment 4 Yousuf Philips (jay) (retired) 2014-10-31 13:59:02 UTC
Created attachment 108727 [details]
screenshot
Comment 5 Yousuf Philips (jay) (retired) 2014-11-08 21:50:45 UTC
*** Bug 81130 has been marked as a duplicate of this bug. ***
Comment 6 Maxim Monastirsky 2014-11-10 09:50:39 UTC
@Noel: It's a wrong conversion of the css::ui::ImageManager service in 0394cb37a2d378511f265004b285fd93df37e5ca. It must be initialized with a Storage.
Comment 7 Commit Notification 2014-11-11 09:42:15 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=00ddedcb477ed09b5649e816b629234d5689b861

fdo#76658 fix bad conversion of old-style UNO service..

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Robinson Tryon (qubit) 2015-12-17 07:53:39 UTC
Migrating Whiteboard tags to Keywords: (bibisectRequest)
[NinjaEdit]