fdo#76658 fix bad conversion of old-style UNO service..

in my commit 0394cb37a2d378511f265004b285fd93df37e5ca
"fdo#46808, Convert ui::ImageManager to new style"

Change-Id: I77d3189723403221e7388969b1eb892a244b90af